clam-annotator (0.3.2-1) unstable; urgency=low

  * New upstream release

 -- David García <dgarcia@iua.upf.es>  Tue,  92 June 2006 17:30:21 +0100

clam-annotator (0.3.1-1) unstable; urgency=low

  * New upstream release

 -- David García <dgarcia@iua.upf.es>  Tue,  9 May 2006 17:30:21 +0100

clam-annotator (0.2.0-1) unstable; urgency=low

  * First 0.2 official release

 -- Pau Arumí <parumi@iua.upf.es>  Wed,  8 Feb 2006 12:43:31 +0100