@@ -8,13 +8,13 @@ from the source tarballs.
 
  2. (Provisional step) Compile the CLAM-vmqt module
 
-	From the CLAM-vmqt module root type
-    $ scons clam_prefix=/usr/local clam_sconstools=/CLAM-sources/scons/sconstools
+	From the vmqt directory type
+    $ scons clam_prefix=/usr/local
 
  3. Compile the CLAM Music Annotator.
 
     From the CLAM-Annotator source root type:
-	$ scons clam_prefix=/usr/local clam_sconstools=/CLAM-sources/scons/sconstools install_prefix=/usr/local clam_vmqt4_path=/path/to/vmqt/lib
+	$ scons clam_prefix=/usr/local install_prefix=/usr/local
 
  4. Install the CLAM-Annotator
 
